# MrFileConverterBot

./: .pre-commit-config.yaml  Pipfile  README.md  conftest.py  main.py  pyproject.toml
.github/workflows/: pre-commit.yml  unit-tests.yml
mr_file_converter/: base_bot.py  base_error.py  containers.py  dispatcher.py
mr_file_converter/command/: command_service.py
mr_file_converter/conversations/: base_handler.py
mr_file_converter/converters/: __init__.py  base_converter.py
mr_file_converter/downloader/: errors.py  youtube_downloader.py  youtube_downloader_handler.py  youtube_downloader_service.py  youtube_downloader_service_test.py
mr_file_converter/file/: errors.py  file_handler.py  file_service.py
mr_file_converter/html/: html_service.py  html_service_test.py
mr_file_converter/io/: io_service.py
mr_file_converter/json/: json_service.py  json_service_test.py
mr_file_converter/telegram/: telegram_service.py
mr_file_converter/url/: errors.py  url_converter.py  url_handler.py  url_service.py
mr_file_converter/xml/: xml_service.py  xml_service_test.py
mr_file_converter/yaml/: yaml_service.py  yaml_service_test.py
mr_file_convertor/: containers.py
mr_file_convertor/downloader/: youtube_downloader.py  youtube_downloader_handler.py  youtube_downloader_service.py
mr_file_convertor/services/: youtube_downloader.py  youtube_downloader_service.py
mr_file_convertor/telegram/: telegram_service.py
tests/: conftest.py
tests/command/: command_service_test.py
tests/downloader/: youtube_downloader_service_test.py
tests/file/: file_service_test.py
(+48 files in other folders)
